CTW: C2 compilation fails with assert(just_allocated_object(alloc_ctl) == ptr) failed: most recent allo

XMLWordPrintable

    • b11

        $ cd test/hotspot/jtreg/testlibrary/ctw
        $ make
        $ cd dist
        $ wget https://repo1.maven.org/maven2/westhawk/snmp/4_13/snmp-4_13.jar
        $ ./ctw.sh snmp-4_13.jar

        # Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/opto/library_call.cpp:4848), pid=29832, tid=29844
        # assert(just_allocated_object(alloc_ctl) == ptr) failed: most recent allo
        #
        # JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.shade.jdk-jdk)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0xfe9608] LibraryCallKit::tightly_coupled_allocation(Node*, RegionNode*)+0x278

          1. replay_pid7695.log
            128 kB
            Aleksey Shipilev
          2. hs_err_pid7695.log
            791 kB
            Aleksey Shipilev

              Assignee:
              Christian Hagedorn
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: